# mbari_wec_utils

./: .gitignore  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
.github/workflows/: build-and-test.sh  ci.yml
buoy_api_cpp/: CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
buoy_api_cpp/examples/: torque_controller.cpp
buoy_api_cpp/examples/include/buoy_api/examples/: torque_control_policy.hpp  torque_controller.hpp
buoy_api_cpp/include/buoy_api/: interface.hpp
buoy_api_cpp/launch/: torque_controller.launch.py
buoy_api_py/: QUALITY_DECLARATION.md  README.md  package.xml  setup.cfg  setup.py
buoy_api_py/buoy_api/: __init__.py  interface.py
buoy_api_py/buoy_api/examples/: bias_damping.py  torque_controller.py
buoy_api_py/config/: pb_nl_bias_damping.yaml
buoy_api_py/launch/: bias_damping.launch.py  torque_controller.launch.py
buoy_interfaces/: CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
buoy_interfaces/msg/: AirSpring.msg  ElectroHydraulic.msg  IncWaveHeight.msg  LatentData.msg  PBCommandResponse.msg  PBWatch.msg  PCRecord.msg  SCRecord.msg  WaveBodyInteractions.msg  swift_telemetry  swift_telemetry.msg
buoy_interfaces/srv/: IncWaveHeight.srv  PCBiasCurrCommand.srv  PCChargeCurrLimCommand.srv  PCVTargMaxCommand.srv  PumpCommand.srv  TFSetCurrLimCommand.srv  TetherCommand.srv
buoy_msgs/: CMakeLists.txt  README.md  interface.py  package.xml
include/buoy_msgs/: interface.hpp
mpl2_ament_copyright/: package.xml  setup.cfg  setup.py
mpl2_ament_copyright/mpl2_ament_copyright/: __init__.py
mpl2_ament_copyright/mpl2_ament_copyright/template/: mpl2_contributing.txt  mpl2_header.txt
msg/: BCRecord.msg  PBCommandResponse.msg  PBRecord.msg  PCRecord.msg  SCRecord.msg  TFRecord.msg  XBRecord.msg
pbcmd/: QUALITY_DECLARATION.md  README.md  package.xml  setup.cfg  setup.py
pbcmd/pbcmd/: pbcmd.py
pbcmd/scripts/: install_aliases.sh  uninstall_aliases.sh
sim_pblog/: README.md  package.xml  setup.cfg  setup.py
sim_pblog/config/: sim_pblog.yaml
sim_pblog/launch/: sim_pblog.launch.py
sim_pblog/sim_pblog/: sim_pblog.py
simple_interp/: CMakeLists.txt  package.xml
simple_interp/include/simple_interp/: interp2d.hpp
simple_interp/src/: interp1d.cpp  interp2d.cpp
simple_interp/tests/: test_simple_interp.cpp
splinter/: CMakeLists.txt  cleanup.sh
splinter/include/splinter_ros/: splinter1d.hpp  splinter2d.hpp
splinter/src/: splinter1d.cpp  splinter2d.cpp
splinter_ros/: CMakeLists.txt  package.xml
splinter_ros/include/splinter_ros/: common.hpp  splinter1d.hpp  splinter2d.hpp
splinter_ros/src/: splinter1d.cpp  splinter2d.cpp
splinter_vendor/: 0001-Update-for-newer-Eigen-API-version.patch  0001-Vendor-Changes.patch  0002-Bump-CMake-minimum-version-to-suppress-warnings.patch  0003-Exclude-installing-Eigen-from-vendored-version.patch  0004-Fix-Utilities-Include.patch  CMakeLists.txt  package.xml  splinter_vendor-extras.cmake.in
srv/: BCResetCommand.srv  BenderCommand.srv  BusCommand.srv  GainCommand.srv  PCBattSwitchCommand.srv  PCDrawCurrLimCommand.srv  PCPackRateCommand.srv  PCRetractCommand.srv  PCScaleCommand.srv  PCStdDevTargCommand.srv  PCWindCurrCommand.srv  SCPackRateCommand.srv  SCResetCommand.srv  TFResetCommand.srv  TFSetActualPosCommand.srv  TFSetChargeModeCommand.srv  TFSetModeCommand.srv  TFSetPosCommand.srv  TFSetStateMachineCommand.srv  TFWatchDogCommand.srv  ValveCommand.srv
