<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbari_wec_utils</name>
  <version>0.0.0</version>
  <description>Meta-package for MBARI Power Buoy messages (telemetry), services (commands), and API</description>
  <maintainer email="anderson@mbari.org">Michael Anderson</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>buoy_interfaces</exec_depend>
  <exec_depend>buoy_api_cpp</exec_depend>
  <exec_depend>buoy_api_py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
