<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buoy_msgs</name>
  <version>2.0.0</version>
  <description>Meta-package for MBARI Power Buoy messages (telemetry), services (commands), and API</description>

  <maintainer email="hamilton@mbari.org">Andrew Hamilton</maintainer>
  <maintainer email="dharini@openrobotics.org">Dharini Dutia</maintainer>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
  <maintainer email="anderson@mbari.org">Michael Anderson</maintainer>

  <license>Apache 2.0</license>

  <author>Louise Poubel</author>
  <author email="michael@openrobotics.org">Michael Carroll</author>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>buoy_interfaces</exec_depend>
  <exec_depend>buoy_api_cpp</exec_depend>
  <exec_depend>buoy_api_py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
