<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_pblog</name>
  <version>2.0.0</version>
  <description>MBARI Power Buoy Simulated Logger</description>
  <maintainer email="henthorn@mbari.org">Richard Henthorn</maintainer>
  <license>Apache 2.0</license>

  <depend>buoy_interfaces</depend>
  <depend>rclpy</depend>
  <depend>buoy_api_py</depend>
  <depend>tf_transformations</depend>
  <depend>python3-transforms3d</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
